[package]
name = "meh-asus"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.1"

[dev-dependencies]
anyhow = "1.0.93" # examples and test

[features]
default = ["common-hardware"]

# abstraction over common hardware like keyboard blacklight, camera led etc.
common-hardware = []

# manual pwm mode of controlling laptop fans
pwm = []