[package]
name = "meh-asus"
version = "0.1.0"
edition = "2021"
authors = ["Vishal Das"]
description = "Abstraction over ASUS hardware configurations to control it programatically on Linux."
license = "MIT"
keywords = [
    "asus",
    "asus-fan",
    "asusctl",
    "asusd",
    "asus-mod",
    "asus-fan-control",
]

[dependencies]
thiserror = "2.0.1"

[dev-dependencies]
anyhow = "1.0.93" # examples and test

[features]
default = ["common-hardware"]

# abstraction over common hardware like keyboard blacklight, camera led etc.
common-hardware = []

# manual pwm mode of controlling laptop fans
pwm = []

[[example]]
name = "toggle_fan_mode"
required-features = ["pwm"]

[[example]]
name = "speed_change"
required-features = ["pwm"]
