[package]
name = "meh-asus"
version = "0.2.1"
edition = "2021"
authors = ["Vishal Das <26341736+dvishal485@users.noreply.github.com>"]
repository = "https://github.com/dvishal485/meh-asus"
description = "Abstraction over ASUS hardware configurations to control it programatically on Linux."
readme = "README.md"
license = "MIT"
keywords = [
    "asus",
    "asus-fan",
    "asusctl",
    "asusd",
    "asus-fan-control",
]

[dependencies]
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.93" # examples and test

[features]
default = ["common-hardware"]

# abstraction over common hardware like keyboard blacklight, camera led etc.
common-hardware = []

# manual pwm mode of controlling laptop fans
pwm = []

[[example]]
name = "toggle_fan_mode"
required-features = ["pwm"]

[[example]]
name = "speed_change"
required-features = ["pwm"]
